--- a/snake_game_v3.1
+++ b/snake_game_v3.1
@@ -185,12 +185,15 @@ void printa_tutorial(){
     printf("Você receberá poderes ao pegar X");
     gotoxy(xtutorial-15, ytutorial+9);
     printf("Pressione 'U' para usar o poder indicado pela seta ↓");
+    gotoxy(xtutorial-15, ytutorial+11);
+    printf("Para encerrar o jogo, pressione 'X'");
+
 }
 
-void limpa_cobra(Pilha *pilha){
+void limpa_cobra(Deque *deque){
 
     int i=0,j=0;
-    Node *aux=pilha->topo;
+    Node *aux= deque->fim;
    
     do
     {
@@ -212,8 +215,8 @@ void limpa_cobra(Pilha *pilha){
       
     } while (aux!= NULL);
 
-    int aux_x = pilha->topo->dados.x;
-    int aux_y = pilha->topo->dados.y;
+    int aux_x = deque->fim->dados.x;
+    int aux_y = deque->fim->dados.y;
 
     matriz[aux_x][aux_y] = 0;
  
@@ -310,17 +313,22 @@ void poder_X(){ //aumenta velocidade por um tempo
     tempo_printa=50000;
 }
 
-// void poder_Y(Pilha *pilha){
-//     node *n = pilha->topo;
-//     int novo_tamanho = (pilha->tamanho) / 2;
- 
-//     for (int i = 0; i < novo_tamanho; i++){
-//         limpa_cobra(pilha);
-//         Desempilha(pilha);
-//         printa_cobra(pilha);
-//     }
+void poder_Y(Pilha *pilha, Deque *deque){
+    if(deque->total_elementos > 0){
+        int novo_tamanho;
+        node *n = deque->fim;
+        if(deque->total_elementos % 2 == 0) novo_tamanho = ((deque->total_elementos) / 2);
+        else novo_tamanho = ((deque->total_elementos) / 2) + 1;
         
-// }
+
+        for (int i = 0; i < novo_tamanho; i++){
+            limpa_cobra(deque);
+            TiraF(deque);
+            printa_cobra(pilha);
+        }
+    }
+        
+}
 
 void poder_W(Pilha *pilha) {
     node *anterior = NULL;
@@ -335,19 +343,19 @@ void poder_W(Pilha *pilha) {
     pilha->topo = anterior;
 }
 
-void usa_poder(Pilha *pilha){
+void usa_poder(Pilha *pilha, Deque *deque){
     if(lista_elemento_inicial(&lista_poderes)=='X') poder_X(); //trocar 1 para X
-    // else if(deque_elemento_inicial(&lista_poderes)=='Y') poder_Y();
+    // else if(deque_elemento_inicial(&lista_poderes)=='Y') poder_Y(pilha, deque);
     // else poder_Z();
     // printf("\7");
     remove_lista(&lista_poderes);
     printa_lista_poderes(&lista_poderes);
 }
 
-char botao(Pilha *pilha){
+char botao(Pilha *pilha, Deque *deque){
     char cha=getch();
     cha=tolower(cha);
-    if(cha=='u') usa_poder(pilha);
+    if(cha=='u') usa_poder(pilha, deque);
     
     else if(cha=='x') gameover=1;
     
@@ -364,7 +372,7 @@ char botao(Pilha *pilha){
 }
 
 
-char delay(Pilha *pilha){
+char delay(Pilha *pilha, Deque *deque){
     // Converting time into milli_seconds
     // para alterar o tempo para menos de um segundo, altere a constate que multimplica a variavel numero de segundos (nao sei se usar float eh melhor, mas estou usando isso).
     int milli_seconds = tempo_printa; // 1000000 tempo referencia lento (1 segundo) aproximadamente.
@@ -376,7 +384,7 @@ char delay(Pilha *pilha){
  
     // looping till required time is not achieved
     char ch='0';
-    while (clock() < start_time + milli_seconds) if(kbhit()) ch=botao(pilha);
+    while (clock() < start_time + milli_seconds) if(kbhit()) ch=botao(pilha,deque);
    
     tempo_printa-=10000*(tempo_printa>=250000);
     if(ch!='0') return ch;
@@ -395,7 +403,7 @@ void move_cobra(Pilha *pilha,Deque * deque, int matriz[100][100]){
         poder_x_usado=0;
     }
     char c=direcao;
-    c=delay(pilha);
+    c=delay(pilha, deque);
     Node *aux1, *aux2;
   
     aux1=pilha->topo;
@@ -424,7 +432,7 @@ void move_cobra(Pilha *pilha,Deque * deque, int matriz[100][100]){
     savex=pilha->cabeca->dados.x;
     savey=pilha->cabeca->dados.y;
     if(kbhit()){
-        c=botao(pilha);
+        c=botao(pilha, deque);
         //move cobra
         // gotoxy(posx_cobra,posy_cobra); //desaparece com a cobra
         // printf(" ");
@@ -474,7 +482,7 @@ void move_cobra(Pilha *pilha,Deque * deque, int matriz[100][100]){
         }
     }
     else{
-        if(kbhit()) c=botao(pilha);
+        if(kbhit()) c=botao(pilha, deque);
         // gotoxy(posx_cobra,posy_cobra); //desaparece com a cobra
         // printf(" ");
         gotoxy(pilha->cabeca->dados.x,pilha->cabeca->dados.y);
