--- a/snake_game_v3.1
+++ b/snake_game_v3.1
@@ -193,7 +193,7 @@ void printa_tutorial(){
 void limpa_cobra(Deque *deque){
 
     int i=0,j=0;
-    Node *aux= deque->fim;
+    No *aux= deque->fim;
    
     do
     {
@@ -316,7 +316,7 @@ void poder_X(){ //aumenta velocidade por um tempo
 void poder_Y(Pilha *pilha, Deque *deque){
     if(deque->total_elementos > 0){
         int novo_tamanho;
-        node *n = deque->fim;
+        No *n = deque->fim;
         if(deque->total_elementos % 2 == 0) novo_tamanho = ((deque->total_elementos) / 2);
         else novo_tamanho = ((deque->total_elementos) / 2) + 1;
         
@@ -331,12 +331,12 @@ void poder_Y(Pilha *pilha, Deque *deque){
 }
 
 void poder_W(Pilha *pilha) {
-    node *anterior = NULL;
-    node *atual = pilha->topo;
-    node *proximo = NULL;
+    Node *anterior = NULL;
+    Node *atual = pilha->topo;
+    Node *proximo = NULL;
     while (atual != NULL) {
-        proximo = atual->proximo;
-        atual->proximo = anterior;
+        proximo = atual->next;
+        atual->next = anterior;
         anterior = atual;
         atual = proximo;
     }  
@@ -345,7 +345,7 @@ void poder_W(Pilha *pilha) {
 
 void usa_poder(Pilha *pilha, Deque *deque){
     if(lista_elemento_inicial(&lista_poderes)=='X') poder_X(); //trocar 1 para X
-    // else if(deque_elemento_inicial(&lista_poderes)=='Y') poder_Y(pilha, deque);
+    else if(lista_elemento_inicial(&lista_poderes)=='Y') poder_Y(pilha, deque);
     // else poder_Z();
     // printf("\7");
     remove_lista(&lista_poderes);
