--- a/snake_game_v3.1
+++ b/snake_game_v3.1
@@ -313,24 +313,23 @@ void poder_X(){ //aumenta velocidade por um tempo
     tempo_printa=50000;
 }
 
-void poder_Y(Pilha *pilha, Deque *deque){
-    if(deque->total_elementos > 0){
+void poder_Y(Pilha *pilha, Deque *deque){ //diminui o corpo da cobra pela metade
+    if(deque->total_elementos > 0){ //se o tamanho for maior que 0 (nao contando com a cabeca)
         int novo_tamanho;
-        No *n = deque->fim;
-        if(deque->total_elementos % 2 == 0) novo_tamanho = ((deque->total_elementos) / 2);
-        else novo_tamanho = ((deque->total_elementos) / 2) + 1;
+        No *n = deque->fim; //  Pega o fim da cobra
+        if(deque->total_elementos % 2 == 0) novo_tamanho = ((deque->total_elementos) / 2); //se o tamanho do corpo da cobra for par, corta pela metade
+        else novo_tamanho = ((deque->total_elementos) / 2) + 1; //se o tamanho do corpo da cobra for impar, corta pela metade e insere 1
         
 
-        for (int i = 0; i < novo_tamanho; i++){
+        for (int i = 0; i < novo_tamanho; i++){ 
             limpa_cobra(deque);
             TiraF(deque);
             printa_cobra(pilha);
         }
     }
-        
 }
 
-void poder_W(Pilha *pilha) {
+void poder_W(Pilha *pilha){
     Node *anterior = NULL;
     Node *atual = pilha->topo;
     Node *proximo = NULL;
@@ -339,14 +338,14 @@ void poder_W(Pilha *pilha) {
         atual->next = anterior;
         anterior = atual;
         atual = proximo;
-    }  
+    }
     pilha->topo = anterior;
 }
 
 void usa_poder(Pilha *pilha, Deque *deque){
     if(lista_elemento_inicial(&lista_poderes)=='X') poder_X(); //trocar 1 para X
     else if(lista_elemento_inicial(&lista_poderes)=='Y') poder_Y(pilha, deque);
-    // else poder_Z();
+    else poder_W(pilha);
     // printf("\7");
     remove_lista(&lista_poderes);
     printa_lista_poderes(&lista_poderes);
@@ -575,9 +574,10 @@ void inicializa_vida(Pilha *pilha, int vida_inicial){
 //-----------logica_poderes---------------
 void gera_poder(Pilha *pilha){ //parece estar bugado
     srand(time(NULL));
-    int aux_pega_valor=(rand()%3)+1;
+    int aux_pega_valor=(rand()%4)+1;
     if(aux_pega_valor==1) poder_printado='X';
     else if(aux_pega_valor==2) poder_printado='Y';
+    else if(aux_pega_valor==3) poder_printado='W';
     else poder_printado='Z';
     
     do{ //gera frutas ate que ela nao esteja na pos da cobra ou dos poderes
@@ -592,7 +592,8 @@ void printa_poder_tela(){
     gotoxy(posx_poder,posy_poder);
     if(poder_printado=='X') printf("X");
     else if(poder_printado=='Y') printf("Y");
-    else if(poder_printado=='Z') printf("Z");
+    else if(poder_printado=='W') printf("W");
+    else printf("Z");
     gotoxy(tamx_tela+100,0);
 }
 
@@ -617,7 +618,8 @@ void printa_tela_dos_poderes(){
 
 void cobra_pega_poder(Pilha * pilha){
     if(pilha->cabeca->dados.x==posx_poder && pilha->cabeca->dados.y==posy_poder){
-        insere_poder_lista();
+        if(poder_printado=='Z') poder_hpUp(pilha);
+        else insere_poder_lista();
         gera_poder(pilha);
         printa_poder_tela();
         printa_lista_poderes();
