--- a/snake_game_v3.2
+++ b/snake_game_v3.2
@@ -377,23 +377,32 @@ void poder_Y(Pilha *pilha, Deque *deque){ //diminui o corpo da cobra pela metade
     }
 }
 
-void poder_W(Pilha *pilha){
-    Node *anterior = NULL;
-    Node *atual = pilha->topo;
-    Node *proximo = NULL;
-    while (atual != NULL) {
-        proximo = atual->next;
-        atual->next = anterior;
-        anterior = atual;
-        atual = proximo;
+void poder_W(Deque *deque, Pilha *pilha) {
+    if (deque->total_elementos > 0 && pilha->tamanho > 0) {
+        Node *cabeca = pilha->topo; // Remove o nó da cabeça da pilha
+        pilha->topo = cabeca->next;
+        pilha->tamanho--;
+        
+        No *novo_no = (No*) malloc(sizeof(No)); // Insere o nó da cabeça no final do deque
+        novo_no->dados = cabeca->dados;
+        novo_no->next = NULL;
+        novo_no->prev = deque->fim;
+
+        if (deque->total_elementos == 1) {
+            deque->inicio = novo_no;
+            deque->fim = novo_no;
+        } else {
+            deque->fim->next = novo_no;
+            deque->fim = novo_no;
+        }
+        free(cabeca);
     }
-    pilha->topo = anterior;
 }
 
 void usa_poder(Pilha *pilha, Deque *deque){
     if(lista_elemento_inicial(&lista_poderes)=='X') poder_X(); //trocar 1 para X
     else if(lista_elemento_inicial(&lista_poderes)=='Y') poder_Y(pilha, deque);
-    else poder_W(pilha);
+    else poder_W(deque, pilha);
     // printf("\7");
     remove_lista(&lista_poderes);
     printa_lista_poderes(&lista_poderes);
