--- a/deque.h_V1.2
+++ b/deque.h_V1.2
@@ -81,6 +81,8 @@ void TiraI (Deque *deque);
 
 void TiraF (Deque *deque);
 
+void Inverte(Deque *deque, int matriz[100][100]);
+
 //------Pilha_sequencial-----------------------------
 
 typedef struct _node_pilha_sequencial{
