--- a/snake_game_v3.2
+++ b/snake_game_v3.2
@@ -378,8 +378,35 @@ void poder_Y(Pilha *pilha, Deque *deque){ //diminui o corpo da cobra pela metade
 }
 
 void poder_W(Deque *deque, Pilha *pilha) {
+    int savex, savey;
+    savex=pilha->cabeca->dados.x;
+    savey=pilha->cabeca->dados.y;
+    
+    
+    No *aux = malloc(sizeof(No));
+    No *atual = malloc(sizeof(No)); 
+    No *proximo = malloc(sizeof(No));
+    No *anterior = malloc(sizeof(No));
     if (deque->total_elementos > 0 && pilha->tamanho > 0) {
-        Node *cabeca = pilha->topo; // Remove o nó da cabeça da pilha
+        
+        if (direcao=='a')
+        {
+            direcao='d';
+        }
+        else if (direcao=='d')
+        {
+            direcao='a';
+        }
+        else if (direcao=='w')
+        {
+            direcao='s';
+        }
+        else if (direcao=='s')
+        {
+            direcao='w';
+        }
+        
+        /*Node *cabeca = pilha->topo; // Remove o nó da cabeça da pilha
         pilha->topo = cabeca->next;
         pilha->tamanho--;
         
@@ -387,7 +414,43 @@ void poder_W(Deque *deque, Pilha *pilha) {
         novo_no->dados = cabeca->dados;
         novo_no->next = NULL;
         novo_no->prev = deque->fim;
+        
+        
+     atual=deque->inicio;
+        anterior=NULL;
+        while (atual != NULL) { 
+            proximo = atual->next;
+            atual->next = anterior;
+            atual->prev = proximo;
+            anterior = atual;
+            atual = proximo;
+   
+*/      
 
+
+matriz[deque->fim->dados.x][deque->fim->dados.y]=0;
+
+PoeI(savex, savey, deque);
+
+
+gotoxy(pilha->cabeca->dados.x,pilha->cabeca->dados.y); 
+        printf("M");
+        pilha->cabeca->dados.x=deque->fim->dados.x;
+        pilha->cabeca->dados.y=deque->fim->dados.y;
+        TiraF(deque);
+        gotoxy(pilha->cabeca->dados.x,pilha->cabeca->dados.y); 
+        printf("0");
+        matriz[savex][savey]=1;
+        Inverte(deque,matriz);
+  //    aux=deque->inicio;
+        
+  //    deque->inicio=deque->fim;
+  //    deque->fim=aux;
+      
+        }
+    
+        
+        /*
         if (deque->total_elementos == 1) {
             deque->inicio = novo_no;
             deque->fim = novo_no;
@@ -396,8 +459,10 @@ void poder_W(Deque *deque, Pilha *pilha) {
             deque->fim = novo_no;
         }
         free(cabeca);
-    }
+        */
+    
 }
+
 
 void usa_poder(Pilha *pilha, Deque *deque){
     if(lista_elemento_inicial(&lista_poderes)=='X') poder_X(); //trocar 1 para X
