--- a/snake_game_v3.2
+++ b/snake_game_v3.2
@@ -88,8 +88,8 @@ int matriz[100][100];
 barra_especial especial;
 
 //----------------parte_grafica---------------------------
-void printa_pontuacao(){
-    //if(!i && !j)
+void printa_pontuacao(){ 
+    //Printa a quantidade de pontos da cobra, com cada fruta (*) dando uma quantidade de pontos definido pela variável pontos_ganhos_por_fruta
     gotoxy(0, tamy_tela + 1);
     printf("Pontuação: %d\n", pontuacao);
     gotoxy(tamx_tela+100,0);
@@ -158,6 +158,7 @@ void printa_cobra(Pilha *pilha){
 }
 
 void printa_vidas(Pilha *pilha){ //Chamar a função toda vez que a cobra colidir/tomar dano e quando ela ganhar vida
+    //Leva o cursor para a posição logo abaixo dos pontos e printa os corações de acordo com a quantidade de vidas que a cobra tem
     gotoxy(0, tamy_tela+2);
     printf("HP: ");
     for(int i = 0; i < pilha->cabeca->dados.hp; i++)
@@ -167,6 +168,7 @@ void printa_vidas(Pilha *pilha){ //Chamar a função toda vez que a cobra colidi
 }
 
 void limpa_linha_vidas(){
+    //Limpa a linha das vidas toda vez que ganhar ou perder uma vida, para garantir que o número dos corações será exatamente o mesmo do número de vidas que a cobra possui de fato
     gotoxy(0, tamy_tela+2);
     printf("                    ");
     gotoxy(tamx_tela+100,0);
@@ -183,24 +185,26 @@ void printa_tutorial(){
     gotoxy(xtutorial-15, ytutorial+5);
     printf("A cobra crescerá de tamanho ao pegar *");
     gotoxy(xtutorial-15, ytutorial+7);
-    printf("Você receberá poderes ao pegar X");
+    printf("Você receberá poderes ao pegar X, Y e W");
     gotoxy(xtutorial-15, ytutorial+9);
-    printf("Pressione 'U' para usar o poder indicado pela seta ↓");
+    printf("Caso você tenha uma única vida, uma vida extra será concedida ao pegar Z");
     gotoxy(xtutorial-15, ytutorial+11);
+    printf("Pressione 'U' para usar o poder indicado pela seta ↓");
+    gotoxy(xtutorial-15, ytutorial+13);
     printf("Para encerrar o jogo, pressione 'X'");
 
 }
 
 void limpa_cobra(Deque *deque){
 
-    int i=0,j=0;
+    //Limpa os caracteres da posição da cobra ao usar o poder que corta seu corpo pela metade, evitando que elementos removidos da estrutura continuem aparecendo na tela
     No *aux= deque->fim;
    
     do
     {
      if (aux->next == NULL)
      {
-         gotoxy(aux->dados.x,aux->dados.y);
+         gotoxy(aux->dados.x,aux->dados.y); 
          
          printf(" ");
      }
@@ -218,11 +222,13 @@ void limpa_cobra(Deque *deque){
 
     int aux_x = deque->fim->dados.x;
     int aux_y = deque->fim->dados.y;
-
+    
+    //Define a posição da matriz, nas coordenadas indicadas por onde estava o pedaço removido, para 0, evitando a colisão com elementos invisíveis 
     matriz[aux_x][aux_y] = 0;
  
     gotoxy(tamx_tela+100,0);
 }
+
 
 
 //----------------parte_logica---------------------------
@@ -369,7 +375,7 @@ void poder_Y(Pilha *pilha, Deque *deque){ //diminui o corpo da cobra pela metade
         else novo_tamanho = ((deque->total_elementos) / 2) + 1; //se o tamanho do corpo da cobra for impar, corta pela metade e insere 1
         
 
-        for (int i = 0; i < novo_tamanho; i++){ 
+        for (int i = 0; i < novo_tamanho; i++){ //Iteração para garantir que todos os elementos necessários serão removidos do deque, não aparecerão mais na tela e serão printados novamente
             limpa_cobra(deque);
             TiraF(deque);
             printa_cobra(pilha);
@@ -654,7 +660,9 @@ void move_cobra(Pilha *pilha,Deque * deque, int matriz[100][100]){
 }
 
 void inicializa_vida(Pilha *pilha, int vida_inicial){
+    //Define a vida da cobra, a função é chamada dentro do main para garantir que a vida será inicializada. A princípio, o valor 1 deverá ser passado como parâmetro da vida
     pilha->cabeca->dados.hp = vida_inicial;
+    
 }
 
 
